fixed footer spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -129,7 +129,7 @@ html * {
 	flex-direction: column;
 	align-items: center;
 	z-index: 0;
-	min-height: calc(100vh - 200px);
+	min-height: calc(100vh - 180px);
 	background-image: url("../public/background.jpg");
 }
 
